Build model incrementally

--- a/Manuscript/r-references.bib
+++ b/Manuscript/r-references.bib
@@ -104,3 +104,18 @@
   pages = {1686},
   doi = {10.21105/joss.01686},
 }
+@Manual{R-gt,
+  title = {gt: Easily Create Presentation-Ready Display Tables},
+  author = {Richard Iannone and Joe Cheng and Barret Schloerke},
+  year = {2020},
+  note = {R package version 0.2.1},
+  url = {https://CRAN.R-project.org/package=gt},
+}
+@Manual{R-tidybayes,
+  title = {{tidybayes}: Tidy Data and Geoms for {Bayesian} Models},
+  author = {Matthew Kay},
+  year = {2020},
+  note = {R package version 2.1.1},
+  url = {http://mjskay.github.io/tidybayes/},
+  doi = {10.5281/zenodo.1308151},
+}
